--- a/#src/_catalog.html
+++ b/#src/_catalog.html
@@ -263,6 +263,7 @@
                 </div>
             </form>
         </div>
+        @@if(calc === true) {
         <!--calculator-->
         <div class="calculator calculator--catalog">
             <div class="calculator__top">
@@ -351,6 +352,7 @@
                 </div>
             </div>
         </div>
+        }
     </aside>
     <!--page-row__content-->
     <div class="page-row__content">
