--- a/#src/_pagination.html
+++ b/#src/_pagination.html
@@ -1,9 +1,9 @@
 
 <!--pagination-->
 <nav class="pagination">
-    <a class="nav-btn" href="#"><svg><use href="img/svg/sprite.svg#btn-prev"></use></svg></a>
-    <a class="pagination__link" href="#">01</a>
-    <a class="pagination__link current" href="#">02</a>
+    <a class="nav-btn" disabled href="#"><svg><use href="img/svg/sprite.svg#btn-prev"></use></svg></a>
+    <a class="pagination__link current" href="#">01</a>
+    <a class="pagination__link" href="#">02</a>
     <a class="pagination__link" href="#">03</a>
     <a class="pagination__link" href="#">04</a>
     <span class="pagination__item">...</span>
