--- a/#src/blog.html
+++ b/#src/blog.html
@@ -31,6 +31,14 @@
                                 <div class="article-p__img">
                                     <img src="img/content/news-1-1.jpg" alt>
                                 </div>
+                                <div class="nav-anchors">
+                                    <ul>
+                                        <li><a class="js-anchor" href="#stroganniy-brus">Строганный брус — что это</a></li>
+                                        <li><a class="js-anchor" href="#eco-material">Экологичные материалы</a></li>
+                                        <li><a class="js-anchor" href="#xvoynie-aromaty">Хвойные смоляные ароматы</a></li>
+                                        <li><a class="js-anchor" href="#sechenie-brusa">Сечение бруса</a></li>
+                                    </ul>
+                                </div>
                                 <div class="page-content">
                                     <h2 id="stroganniy-brus">Строганный брус</h2>
                                     <p>Строганный брус — один из главных материалов, применяемых в деревянном домостроении. Используется для возведения
@@ -294,6 +302,7 @@
                         </div>
                     </div>
                 </section>
+                @@include('_callback-form.html', {"contacts": false, "firstOrder": false})
             </main>
             @@include('_footer.html', {"main": false})
             @@include('_modal.html')
