--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -66,7 +66,7 @@
                                 </div>
                             </div>
                             <div class="catalog-p__block" data-block="catalog">
-                                @@include("_catalog.html")
+                                @@include("_catalog.html",{"calc": false})
                             </div>
                         </div>
                     </div>
