--- a/#src/order-reg-legal.html
+++ b/#src/order-reg-legal.html
@@ -14,7 +14,7 @@
                 <!--page-top-->
                 <div class="page-top">
                     <div class="container">
-                        @@include('_breadcrumbs.html', {"page": "Оформление заказа"})
+                        @@include('_breadcrumbs-2.html', {"page1":"Корзина", "page2": "Оформление заказа"})
                     </div>
                 </div>
                 <section class="section order-p">
