--- a/#src/price-list.html
+++ b/#src/price-list.html
@@ -29,7 +29,7 @@
                             <aside class="page-row__aside">
                                 <nav class="account-nav">
                                     <ul>
-                                        <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#account-profile"></use></svg>Личные данные<span></span></a></li>
+                                        <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#account-profile"></use></svg>Информация о компании<span></span></a></li>
                                         <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#account-cart"></use></svg>Текущие заказы</a></li>
                                         <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#orders"></use></svg>История заказов<span></span></a></li>
                                         <li><a class="active" href="#"><svg><use xlink:href="img/svg/sprite.svg#price-list"></use></svg>Прайс-лист<span></span></a></li>
