--- a/#src/promos.html
+++ b/#src/promos.html
@@ -58,6 +58,7 @@
                         </div>
                     </div>
                 </section>
+                @@include('_callback-form.html', {"contacts": false, "firstOrder": true})
             </main>
             @@include('_footer.html', {"main": false})
             @@include('_modal.html')
