--- a/#src/quiz.html
+++ b/#src/quiz.html
@@ -90,7 +90,7 @@
                                     </label>
                                 </div>
                                 <button type="button" class="btn main-btn" data-to-step="2">Далее</button>
-                                <div data-error=""></div>
+                                <div data-error></div>
                             </div>
                             <div class="quiz-form__sec" data-step="2">
                                 <div class="quiz-form__top">
@@ -176,11 +176,12 @@
                                     </div>
                                     <div class="form__group">
                                         <div class="form__lbl">Прикрепите коммерческое предложение</div>
-                                        <p>В коммерческом предложении необходимо указать цены с&nbsp;НДС/без НДС, цена на&nbsp;франко-склад поставщика или&nbsp;франко-склад
-                                            покупателя, формат упаковки, должна стоять подпись ответственного лица и&nbsp;присутствовать печать</p>
                                         <div class="item-form file-form">
                                             <div class="file-form__info">
-                                                <span>Допустимые форматы: pdf, jpg, png. До 5 MB</span>
+                                                <p class="file-form__info-desc">В коммерческом предложении необходимо указать цены с&nbsp;НДС/без НДС, цена на&nbsp;франко-склад поставщика
+                                                    или&nbsp;франко-склад
+                                                    покупателя, формат упаковки, должна стоять подпись ответственного лица и&nbsp;присутствовать печать</p>
+                                                <p>Допустимые форматы: pdf, jpg, png. До 5 MB</p>
                                             </div>
                                             <label>
                                                 <input type="file" accept=".png, .jpg, .jpeg, .pdf" data-max-size="5">
