--- a/#src/subcategory.html
+++ b/#src/subcategory.html
@@ -84,7 +84,7 @@
                                 <a href="#">Подборка</a>
                             </div>
                         </div>
-                        @@include("_catalog.html")
+                        @@include("_catalog.html", {"calc": true})
                     </div>
                 </section>
                 @@include('_other-cat.html', {"title": "<span>Популярные</span> товары", "btn": true})
