--- a/#src/account-no-logged.html
+++ b/#src/account-no-logged.html
@@ -23,7 +23,7 @@
                         <div class="sec-top">
                             <h1>Личные данные</h1>
                         </div>
-                        <div class="profile-p__noLogged">
+                        <div class="profile-noLogged">
                             <p><b>Чтобы просматривать страницу, авторизуйтесь!</b></p>
                             <button class="btn main-btn main-btn--link mod-open-btn" data-modal="log-modal">
                                 Войти
