--- a/#src/cart.html
+++ b/#src/cart.html
@@ -22,6 +22,13 @@
                         <div class="sec-top">
                             <h1>Ваша корзина</h1>
                         </div>
+                        <div class="profile-noLogged">
+                            <p><b>Есть аккаунт? Авторизуйтесь!</b></p>
+                            <button class="btn main-btn main-btn--link mod-open-btn" data-modal="log-modal">
+                                Войти
+                                <svg><use xlink:href="img/svg/sprite.svg#link"></use></svg>
+                            </button>
+                        </div>
                         <form class="cart-p__form">
                             <div class="cart-p__top">
                                 <label class="item-checkbox">
