--- a/#src/category.html
+++ b/#src/category.html
@@ -63,7 +63,7 @@
                                 <a href="#">Подборка</a>
                             </div>
                         </div>
-                        @@include("_catalog.html")
+                        @@include("_catalog.html", {"calc": false})
                     </div>
                 </section>
                 @@include('_other-cat.html', {"title": "<span>Популярные</span> товары", "btn": true})
