--- a/#src/order-success.html
+++ b/#src/order-success.html
@@ -14,7 +14,7 @@
                 <!--page-top-->
                 <div class="page-top">
                     <div class="container">
-                        @@include('_breadcrumbs.html', {"page": "Оформление заказа"})
+                        @@include('_breadcrumbs-2.html', {"page1":"Корзина", "page2": "Оформление заказа"})
                     </div>
                 </div>
                 <!--order-success-->
@@ -29,7 +29,11 @@
                             <div class="order-success__det">
                                 Дата и время оформление заказа: 05.07.2021 12:70
                             </div>
-                        </div>                       
+                        </div>
+                        <a href="#" class="btn main-btn main-btn--link">
+                            Перейти в личный кабинет
+                            <svg><use xlink:href="img/svg/sprite.svg#link"></use></svg>
+                        </a>                        
                     </div>
                 </section>
                 @@include('_other-cat.html', {"title": "Вы недавно смотрели", "btn": false})
