--- a/#src/profile-edit.html
+++ b/#src/profile-edit.html
@@ -14,7 +14,7 @@
                 <!--page-top-->
                 <div class="page-top page-top--account">
                     <div class="container">
-                        @@include('_breadcrumbs-2.html', {"page1": "Личный кабинет", "page2": "Личные данные"})
+                        @@include('_breadcrumbs.html', {"page": "Личные данные"})
                         <a href="account.html" class="btn h6 back-btn">
                             <svg><use xlink:href="img/svg/sprite.svg#btn-prev"></use></svg>
                             Назад
@@ -76,72 +76,6 @@
                                     </div>
                                 </div>
                                 <button class="btn stroke-btn mod-open-btn" data-modal="profile-edit-modal">Изменить данные</button>
-                                <div class="profile-p__cols">
-                                    <div class="profile-p__col">
-                                        <div class="profile-p__lbl">Информация о компании</div>
-                                        <div class="item-contact">
-                                            <span>Название компании:</span>
-                                            <span>Woodber</span>
-                                        </div>
-                                        <div class="item-contact">
-                                            <span>ИНН:</span>
-                                            <span>2194808230590329</span>
-                                        </div>
-                                        <div class="item-contact">
-                                            <span>Email:</span>
-                                            <span>example@mail.ru</span>
-                                        </div>
-                                        <div class="item-contact">
-                                            <span>Карточка компании:</span>
-                                            <span>company.png (2,3 Mb)</span>
-                                        </div>
-                                    </div>
-                                    <div class="profile-p__col">
-                                        <div class="profile-p__lbl">Контактное лицо</div>
-                                        <div class="item-contact">
-                                            <span>ФИО</span>
-                                            <span>Иванов Алексей Алексеевич</span>
-                                        </div>
-                                        <div class="item-contact">
-                                            <span>Телефон</span>
-                                            <span>+7 937 635-36-36</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <button class="btn stroke-btn mod-open-btn" data-modal="profile-le-edit-modal">Изменить данные</button>
-                                <div class="profile-p__cols">
-                                    <div class="profile-p__col">
-                                        <div class="profile-p__lbl">Изменение пароля</div>
-                                        <form class="form">
-                                            <div class="form__items">
-                                                <div class="item-form item-form--password">
-                                                    <div class="item-form__inp">
-                                                        <input type="password" placeholder=" " class="required">
-                                                        <div class="item-form__placeholder">Введите пароль</div>
-                                                        <button type="button" class="item-form__eye" aria-label="Показать пароль"></button>
-                                                    </div>
-                                                    <span data-error></span>
-                                                </div>
-                                                <div class="item-form item-form--password">
-                                                    <div class="item-form__inp">
-                                                        <input type="password" placeholder=" " class="required">
-                                                        <div class="item-form__placeholder">Повторите пароль</div>
-                                                        <button type="button" class="item-form__eye" aria-label="Показать пароль"></button>
-                                                    </div>
-                                                    <span data-error></span>
-                                                </div>
-                                            </div>
-                                            <button type="submit" class="btn main-btn">Сохранить</button>
-                                        </form>
-                                    </div>
-                                    <div class="profile-p__addresses profile-p__col">
-                                        <div class="profile-p__lbl">Адреса доставки</div>
-                                        <button class="btn text-btn profile-p__address-btn mod-open-btn" data-modal="address-modal">
-                                            Добавить новый адрес
-                                            <svg><use xlink:href="img/svg/sprite.svg#plus-btn"></use></svg>
-                                        </button>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
