--- a/lescraft/index.html
+++ b/lescraft/index.html
@@ -107,7 +107,7 @@
         <li><a href="faq.html" target="_blank">Ответы на частые вопросы</a></li>
         <li><a href="quiz.html" target="_blank">Анкета</a></li>
         <li><a href="quiz-success.html" target="_blank">Анкета - успех</a></li>
-        <li><a href="legal-entity.html" target="_blank">Для юридических лици</a></li>
+        <li><a href="legal-entity.html" target="_blank">Для юридических лиц</a></li>
         <li><a href="suppliers.html" target="_blank">Для поставщиков</a></li>
         <li><a href="vacancies.html" target="_blank">Вакансии</a></li>
         <li><a href="vacancy.html" target="_blank">Вакансия</a></li>
