--- a/lescraft/profile-edit.html
+++ b/lescraft/profile-edit.html
@@ -438,7 +438,6 @@
 <div class="breadcrumbs">
     <ul>
         <li><a href="#" class="link">Главная</a></li>
-        <li><a href="#" class="link">Личный кабинет</a></li>
         <li>Личные данные</li>
     </ul>
 </div>
@@ -503,72 +502,6 @@
                                     </div>
                                 </div>
                                 <button class="btn stroke-btn mod-open-btn" data-modal="profile-edit-modal">Изменить данные</button>
-                                <div class="profile-p__cols">
-                                    <div class="profile-p__col">
-                                        <div class="profile-p__lbl">Информация о компании</div>
-                                        <div class="item-contact">
-                                            <span>Название компании:</span>
-                                            <span>Woodber</span>
-                                        </div>
-                                        <div class="item-contact">
-                                            <span>ИНН:</span>
-                                            <span>2194808230590329</span>
-                                        </div>
-                                        <div class="item-contact">
-                                            <span>Email:</span>
-                                            <span>example@mail.ru</span>
-                                        </div>
-                                        <div class="item-contact">
-                                            <span>Карточка компании:</span>
-                                            <span>company.png (2,3 Mb)</span>
-                                        </div>
-                                    </div>
-                                    <div class="profile-p__col">
-                                        <div class="profile-p__lbl">Контактное лицо</div>
-                                        <div class="item-contact">
-                                            <span>ФИО</span>
-                                            <span>Иванов Алексей Алексеевич</span>
-                                        </div>
-                                        <div class="item-contact">
-                                            <span>Телефон</span>
-                                            <span>+7 937 635-36-36</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <button class="btn stroke-btn mod-open-btn" data-modal="profile-le-edit-modal">Изменить данные</button>
-                                <div class="profile-p__cols">
-                                    <div class="profile-p__col">
-                                        <div class="profile-p__lbl">Изменение пароля</div>
-                                        <form class="form">
-                                            <div class="form__items">
-                                                <div class="item-form item-form--password">
-                                                    <div class="item-form__inp">
-                                                        <input type="password" placeholder=" " class="required">
-                                                        <div class="item-form__placeholder">Введите пароль</div>
-                                                        <button type="button" class="item-form__eye" aria-label="Показать пароль"></button>
-                                                    </div>
-                                                    <span data-error></span>
-                                                </div>
-                                                <div class="item-form item-form--password">
-                                                    <div class="item-form__inp">
-                                                        <input type="password" placeholder=" " class="required">
-                                                        <div class="item-form__placeholder">Повторите пароль</div>
-                                                        <button type="button" class="item-form__eye" aria-label="Показать пароль"></button>
-                                                    </div>
-                                                    <span data-error></span>
-                                                </div>
-                                            </div>
-                                            <button type="submit" class="btn main-btn">Сохранить</button>
-                                        </form>
-                                    </div>
-                                    <div class="profile-p__addresses profile-p__col">
-                                        <div class="profile-p__lbl">Адреса доставки</div>
-                                        <button class="btn text-btn profile-p__address-btn mod-open-btn" data-modal="address-modal">
-                                            Добавить новый адрес
-                                            <svg><use xlink:href="img/svg/sprite.svg#plus-btn"></use></svg>
-                                        </button>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -1774,7 +1707,7 @@
             <p>Для восстановления вашего пароля необходимо ввести ваш&nbsp;email ниже, и&nbsp;мы&nbsp;вышлем ссылку для&nbsp;сброса пароля</p>
         </div>
         <div class="custom-scroll modal__scroll">
-            <form class="form" onsubmit="event.preventDefault();formReset(this);recoveryPassword('email@mail.ru')">
+            <form class="form" onsubmit="event.preventDefault();formReset(this);recoveryPassword('email@mail.ru','Проверьте свой почтовый ящик','На ваш почтовый ящик email@mail.ru мы&nbsp;отправили письмо с&nbsp;инструкциями по&nbsp;сбросу пароля')">
                 <div class="form__items">
                     <div class="item-form">
                         <div class="item-form__inp">
@@ -1811,7 +1744,7 @@
         </div>
         <div class="custom-scroll modal__scroll">
             <form class="form"
-                onsubmit="event.preventDefault();openSuccessMod('Проверьте свой почтовый ящик','На ваш почтовый ящик email@mail.ru мы&nbsp;отправили письмо с&nbsp;инструкциями по&nbsp;сбросу пароля')">
+                onsubmit="event.preventDefault();formReset(this);openModal(document.querySelector('#password-success-modal'))">
                 <div class="form__items">
                     <div class="item-form item-form--password">
                         <div class="item-form__inp">
@@ -1985,8 +1918,8 @@
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#home"></use></svg></div><span>Главная</span></a></li>
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#catalog"></use></svg></div><span>Каталог</span></a></li>
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#fav"></use></svg><span>3</span></div><span>Избранное</span></a></li>
-            <!-- <li><a href="profile.html"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Профиль</span></a></li> 
-            <li><button class="btn mod-open-btn" data-modal="account-modal"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Войти</span></button></li> -->
+            <!-- <li><a href="profile.html"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Профиль</span></a></li>--> 
+            <li><button class="btn mod-open-btn" data-modal="log-modal"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Войти</span></button></li> 
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#cart"></use></svg><span>6</span></div><span>Корзина</span></a></li>
         </ul>
     </div>
