--- a/lescraft/selection-catalog.html
+++ b/lescraft/selection-catalog.html
@@ -1212,9 +1212,9 @@
                                 
 <!--pagination-->
 <nav class="pagination">
-    <a class="nav-btn" href="#"><svg><use href="img/svg/sprite.svg#btn-prev"></use></svg></a>
-    <a class="pagination__link" href="#">01</a>
-    <a class="pagination__link current" href="#">02</a>
+    <a class="nav-btn" disabled href="#"><svg><use href="img/svg/sprite.svg#btn-prev"></use></svg></a>
+    <a class="pagination__link current" href="#">01</a>
+    <a class="pagination__link" href="#">02</a>
     <a class="pagination__link" href="#">03</a>
     <a class="pagination__link" href="#">04</a>
     <span class="pagination__item">...</span>
@@ -1838,62 +1838,6 @@
                 </div>
             </div>
             <div class="swiper-scrollbar"></div>
-        </div>
-    </div>
-</section>
-                <!--main-form-->
-<section class="section main-form" data-animation="fadeUp">
-    <div class="container">
-        <div class="main-form__inner">
-            <div class="main-form__img">
-                <div class="media-contain">
-                    <picture><source srcset="img/main-form-bg.webp" type="image/webp"><img src="img/main-form-bg.png" alt></picture>
-                </div>
-            </div>
-            <div class="main-form__content">
-                <div class="main-form__top">
-                    <h2>Получите скидку на&nbsp;первый заказ</h2>
-                    <p>Заполните небольшую форму, и мы отправим вам прайс лист с&nbsp;самыми свежими ценами на&nbsp;наши качественные и долговечные материалы</p>
-                </div>
-                <form class="form disabled-form" onsubmit="event.preventDefault();formReset(this);openSuccessMod()">
-                    <div class="form__items">
-                        <div class="item-form">
-                            <div class="item-form__inp">
-                                <input type="text" placeholder=" " class="required">
-                                <div class="item-form__placeholder">Ваше имя</div>
-                                <button type="button" class="btn-cross item-form__reset" aria-label="Очистить поле"></button>
-                            </div>
-                            <span data-error></span>
-                        </div>
-                        <div class="item-form">
-                            <div class="item-form__inp">
-                                <input type="tel" placeholder=" " class="required">
-                                <div class="item-form__placeholder">Телефон</div>
-                                <button type="button" class="btn-cross item-form__reset" aria-label="Очистить поле"></button>
-                            </div>
-                            <span data-error></span>
-                        </div>
-                        <div class="item-form">
-                            <div class="item-form__inp">
-                                <input type="text" placeholder=" " class="required">
-                                <div class="item-form__placeholder">Email</div>
-                                <button type="button" class="btn-cross item-form__reset" aria-label="Очистить поле"></button>
-                            </div>
-                            <span data-error></span>
-                        </div>
-                    </div>
-                    <div class="form__footer">
-                        <label class="item-checkbox">
-                            <input type="checkbox" checked class="required">
-                            <span>Я соглашаюсь с <a href="#" target="_blank">Политикой обработки персональных данных</a></span>
-                        </label>
-                        <button type="submit" class="btn main-btn main-btn--link">
-                            Отправить
-                            <svg><use xlink:href="img/svg/sprite.svg#link"></use></svg>
-                        </button>
-                    </div>
-                </form>
-            </div>
         </div>
     </div>
 </section>
@@ -3098,7 +3042,7 @@
             <p>Для восстановления вашего пароля необходимо ввести ваш&nbsp;email ниже, и&nbsp;мы&nbsp;вышлем ссылку для&nbsp;сброса пароля</p>
         </div>
         <div class="custom-scroll modal__scroll">
-            <form class="form" onsubmit="event.preventDefault();formReset(this);recoveryPassword('email@mail.ru')">
+            <form class="form" onsubmit="event.preventDefault();formReset(this);recoveryPassword('email@mail.ru','Проверьте свой почтовый ящик','На ваш почтовый ящик email@mail.ru мы&nbsp;отправили письмо с&nbsp;инструкциями по&nbsp;сбросу пароля')">
                 <div class="form__items">
                     <div class="item-form">
                         <div class="item-form__inp">
@@ -3135,7 +3079,7 @@
         </div>
         <div class="custom-scroll modal__scroll">
             <form class="form"
-                onsubmit="event.preventDefault();openSuccessMod('Проверьте свой почтовый ящик','На ваш почтовый ящик email@mail.ru мы&nbsp;отправили письмо с&nbsp;инструкциями по&nbsp;сбросу пароля')">
+                onsubmit="event.preventDefault();formReset(this);openModal(document.querySelector('#password-success-modal'))">
                 <div class="form__items">
                     <div class="item-form item-form--password">
                         <div class="item-form__inp">
@@ -3309,8 +3253,8 @@
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#home"></use></svg></div><span>Главная</span></a></li>
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#catalog"></use></svg></div><span>Каталог</span></a></li>
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#fav"></use></svg><span>3</span></div><span>Избранное</span></a></li>
-            <!-- <li><a href="profile.html"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Профиль</span></a></li> 
-            <li><button class="btn mod-open-btn" data-modal="account-modal"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Войти</span></button></li> -->
+            <!-- <li><a href="profile.html"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Профиль</span></a></li>--> 
+            <li><button class="btn mod-open-btn" data-modal="log-modal"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Войти</span></button></li> 
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#cart"></use></svg><span>6</span></div><span>Корзина</span></a></li>
         </ul>
     </div>
