--- a/lescraft/vacancy.html
+++ b/lescraft/vacancy.html
@@ -492,46 +492,53 @@
                             <aside class="page-row__aside">
                                 <!--feedback-form-->
                                 <form action class="form disabled-form feedback-form" onsubmit="event.preventDefault();formReset(this);openSuccessMod()">
-                                    <h3>Откликнуться на вакансию</h3>
-                                    <div class="form__items">
-                                        <div class="item-form">
-                                            <div class="item-form__inp">
-                                                <input type="text" placeholder=" " class="required">
-                                                <div class="item-form__placeholder">Ваше имя</div>
-                                                <button type="button" class="btn-cross item-form__reset" aria-label="Очистить поле"></button>
+                                    <h3>Откликнуться на вакансию</h3>
+                                    <div class="form__group">
+                                        <div class="form__items">
+                                            <div class="item-form">
+                                                <div class="item-form__inp">
+                                                    <input type="text" placeholder=" " class="required">
+                                                    <div class="item-form__placeholder">Ваше имя</div>
+                                                    <button type="button" class="btn-cross item-form__reset" aria-label="Очистить поле"></button>
+                                                </div>
+                                                <span data-error></span>
                                             </div>
-                                            <span data-error></span>
-                                        </div>
-                                        <div class="item-form">
-                                            <div class="item-form__inp">
-                                                <input type="tel" placeholder=" " class="required">
-                                                <div class="item-form__placeholder">Телефон</div>
-                                                <button type="button" class="btn-cross item-form__reset" aria-label="Очистить поле"></button>
+                                            <div class="item-form">
+                                                <div class="item-form__inp">
+                                                    <input type="tel" placeholder=" " class="required">
+                                                    <div class="item-form__placeholder">Телефон</div>
+                                                    <button type="button" class="btn-cross item-form__reset" aria-label="Очистить поле"></button>
+                                                </div>
+                                                <span data-error></span>
                                             </div>
-                                            <span data-error></span>
-                                        </div>
-                                        <div class="item-form">
-                                            <div class="item-form__inp">
-                                                <input type="text" placeholder=" " class="required">
-                                                <div class="item-form__placeholder">Email</div>
-                                                <button type="button" class="btn-cross item-form__reset" aria-label="Очистить поле"></button>
+                                            <div class="item-form">
+                                                <div class="item-form__inp">
+                                                    <input type="text" placeholder=" " class="required">
+                                                    <div class="item-form__placeholder">Email</div>
+                                                    <button type="button" class="btn-cross item-form__reset" aria-label="Очистить поле"></button>
+                                                </div>
+                                                <span data-error></span>
                                             </div>
-                                            <span data-error></span>
-                                        </div>
-                                        <div class="item-form">
-                                            <textarea placeholder="Сообщение"></textarea>
-                                            <span data-error></span>
-                                        </div>
-                                        <div class="item-form file-form">
-                                            <div class="file-form__info">
-                                                <span>Допустимые форматы: pdf, jpg, png. До 5 MB</span>
+                                            <div class="item-form">
+                                                <textarea placeholder="Сообщение"></textarea>
+                                                <span data-error></span>
                                             </div>
-                                            <label>
-                                                <input type="file" accept=".png, .jpg, .jpeg, .pdf" data-max-size="5">
-                                                <span>Перетащите, или <span>выберите файл</span></span>
-                                            </label>
-                                            <div class="file-form__items"></div>
-                                            <span data-error></span>
+                                        </div>
+                                    </div>
+                                    <div class="form__group">
+                                        <div class="form__lbl">Прикрепите ваше резюме</div>
+                                        <div class="form__items">
+                                            <div class="item-form file-form">
+                                                <div class="file-form__info">
+                                                    <span>Допустимые форматы: pdf, jpg, png. До 5 MB</span>
+                                                </div>
+                                                <label>
+                                                    <input type="file" accept=".png, .jpg, .jpeg, .pdf" data-max-size="5">
+                                                    <span>Перетащите, или <span>выберите файл</span></span>
+                                                </label>
+                                                <div class="file-form__items"></div>
+                                                <span data-error></span>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="form__footer">
@@ -1751,7 +1758,7 @@
             <p>Для восстановления вашего пароля необходимо ввести ваш&nbsp;email ниже, и&nbsp;мы&nbsp;вышлем ссылку для&nbsp;сброса пароля</p>
         </div>
         <div class="custom-scroll modal__scroll">
-            <form class="form" onsubmit="event.preventDefault();formReset(this);recoveryPassword('email@mail.ru')">
+            <form class="form" onsubmit="event.preventDefault();formReset(this);recoveryPassword('email@mail.ru','Проверьте свой почтовый ящик','На ваш почтовый ящик email@mail.ru мы&nbsp;отправили письмо с&nbsp;инструкциями по&nbsp;сбросу пароля')">
                 <div class="form__items">
                     <div class="item-form">
                         <div class="item-form__inp">
@@ -1788,7 +1795,7 @@
         </div>
         <div class="custom-scroll modal__scroll">
             <form class="form"
-                onsubmit="event.preventDefault();openSuccessMod('Проверьте свой почтовый ящик','На ваш почтовый ящик email@mail.ru мы&nbsp;отправили письмо с&nbsp;инструкциями по&nbsp;сбросу пароля')">
+                onsubmit="event.preventDefault();formReset(this);openModal(document.querySelector('#password-success-modal'))">
                 <div class="form__items">
                     <div class="item-form item-form--password">
                         <div class="item-form__inp">
@@ -1962,8 +1969,8 @@
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#home"></use></svg></div><span>Главная</span></a></li>
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#catalog"></use></svg></div><span>Каталог</span></a></li>
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#fav"></use></svg><span>3</span></div><span>Избранное</span></a></li>
-            <!-- <li><a href="profile.html"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Профиль</span></a></li> 
-            <li><button class="btn mod-open-btn" data-modal="account-modal"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Войти</span></button></li> -->
+            <!-- <li><a href="profile.html"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Профиль</span></a></li>--> 
+            <li><button class="btn mod-open-btn" data-modal="log-modal"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Войти</span></button></li> 
             <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#cart"></use></svg><span>6</span></div><span>Корзина</span></a></li>
         </ul>
     </div>
